# bsq

./: .gitignore  CMakeLists.txt  Makefile  README.md  bsq.h  bsq_def.h  config.h  file_utils.h  file_utils1.c  file_utils2.c  file_utils3.c  file_utils4.c  fill_sq_size.c  ft_def.h  main.c  mem_utils.c  mem_utils.h  sq_allocator.c  sq_legend_parser.c  sq_parser.c  sq_solver.c  sq_utils.c  sq_utils.h  sq_utils2.c  string_utils.h  string_utils1.c  string_utils2.c  string_utils3.c  string_utils4.c  string_utils5.c
include/: bsq.h  config.h  sq
lib/ft/: Makefile
lib/ft/ft_ctype/: Makefile.mk
lib/ft/ft_libio/: Makefile.mk  file_utils1.c  file_utils2.c  file_utils3.c  file_utils4.c
lib/ft/ft_stdlib/: Makefile.mk  ft_atoi.c
lib/ft/ft_string/: Makefile.mk  string_utils1.c  string_utils2.c  string_utils3.c  string_utils4.c  string_utils5.c
lib/ft/include/: file_utils.h  ft_ctype.h  ft_stdlib.h  string_utils.h
lib/sq/: Makefile
lib/sq/include/: bsq_def.h  mem_utils.h  sq_utils.h
lib/sq/mem/: Makefile.mk  mem_utils.c
lib/sq/sq/: Makefile.mk  sq_legend_parser.c  sq_parser.c  sq_solver.c  sq_utils2.c  sq_utils3.c
src/: main.c
test/: map.h  map.txt  map2.txt  map3.txt  map4.txt
